fix some spacing browser and portfolio hero

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -135,10 +135,11 @@ img{
     height: max-content;
   }
 
+  margin-top: lines(2);
   overflow: hidden;
 
-  @include media-max-large{
-    margin: lines(0.5);
+  @media (max-width: em($max-width)){
+    margin: lines(1) lines(0.5);
   }
 
   background: url('/static/img/browser.svg') rgb(51 54 55);
