--- a/src/scss/_post_hero.scss
+++ b/src/scss/_post_hero.scss
@@ -5,10 +5,10 @@
   padding: lines(1) lines(0.5) lines(0.5);
 
   @include media-medium{
-    padding: lines(1) lines(1) lines(1);
+    padding: lines(1) lines(1) lines(0.5);
   }
 
-  @media (min-width: em(1024px)) {
+  @media (min-width: em(1110px)) {
     margin: 0 0 lines(1);
     padding-bottom: lines(2);
   }
@@ -20,7 +20,7 @@
     flex-grow: 1;
     flex-basis: 400px;
 
-    @media (min-width: em(1024px)) {
+    @media (min-width: em(1110px)) {
       padding-right: lines(1);
     }
   }
@@ -36,7 +36,7 @@
   .post-hero &{
     margin-bottom: lines(1);
     
-    @media (min-width: em(1024px)) {
+    @media (min-width: em(1110px)) {
       text-align: left;
     }
   }
@@ -55,9 +55,16 @@
     height: 100%;
     max-height: 100%;
 
+    margin-bottom: lines(2);
+
     .browser{
+      margin: lines(0.5) 0 0;
       align-self: center;
       filter: hue-rotate(-35deg) saturate(1);
+      
+      @include media-max-large{
+        margin: lines(0.5) lines(0.5) 0;
+      }
     }
 
     :not(.browser) {
